--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <p class="section-subtitle">How can you communicate?</p>
             <h6 class="section-title mb-5">Contact Me</h6>
             <!-- contact form -->
-            <form action="https://api.staticman.net/v2/entry/walimuhammadSoftwareEngineer/MyPortfolio/main" method="POST">
+            <form action="https://formspree.io/f/mwpevzkn" method="POST">
                 <input type="text" name="fields[name]" placeholder="Test Name" required>
                 <input type="email" name="fields[email]" placeholder="Test Email" required>
                 <textarea name="fields[comment]" placeholder="Test Comment"></textarea>
