--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-6 col-lg-3">
-                    <div class="service-card">
+
+                    <div class="service-card" >
                         <div class="body">
                             <img src="assets/imgs/pencil-case.svg"
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
@@ -134,7 +135,7 @@
                                 alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"
                                 class="icon">
                                 <h6 class="title">Admin Portals</h6>
-                                <p class="subtitle">I have Build International Portals For NamiPay <a href="//www.namipay.com.sa/"> https://www.namipay.com.sa/ </a>  &nbsp;&nbsp;1) Sales 2) Merchants Portals</p>
+                                <p class="subtitle">I have Build International Portals For NamiPay <a href="https://portal.namipay.com.sa/"> https://portal.namipay.com.sa/ </a>  &nbsp;&nbsp;  Onboarding Merchants Portals</p>
                         </div>
                     </div>
                 </div>
