--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
-            
+            <p class="section-subtitle">I have work with these company</p>
             <h6 class="section-title mb-6">Portfolio</h6>
             <!-- row -->
             <div class="row">
